<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.WelcomeFragment"
    android:orientation="vertical">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/black"
        android:scaleType="centerCrop"
        android:alpha="1"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        android:background="@color/black"
        android:alpha="0.2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


                <ImageView
                    android:padding="2dp"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/logo" />



            <TextView
                android:id="@+id/welcoming"
                android:fontFamily="@font/mina_bold"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:text="@string/welcome_back_username"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal"
                android:gravity="center_vertical|right">


                <ImageButton
                    android:id="@+id/cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_shopping_cart"
                    android:background="@drawable/custom_btn_bg"/>

                <ImageButton
                    android:id="@+id/settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_settings"
                    android:background="@drawable/custom_btn_bg"/>
            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.SearchView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>
        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/custom_search_bg"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/filters"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:gravity="center">

                        <RadioButton
                            android:id="@+id/filter_all"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:paddingHorizontal="15dp"
                            android:textSize="16sp"
                            android:layout_marginRight="15dp"
                            android:layout_marginLeft="15dp"
                            android:background="@drawable/custom_radio"
                            android:gravity="center"
                            android:button="@color/black"
                            android:text="@string/all"/>

                        <RadioButton
                            android:id="@+id/filter_star"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginRight="15dp"
                            android:paddingHorizontal="15dp"
                            android:textSize="16sp"
                            android:text="@string/stars"
                            android:gravity="center"
                            android:background="@drawable/custom_radio"
                            android:button="@color/black"
                            />

                        <RadioButton
                            android:id="@+id/filter_exoplanet"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:paddingHorizontal="15dp"
                            android:textSize="16sp"
                            android:layout_marginRight="15dp"
                            android:gravity="center"
                            android:button="@color/black"
                            android:text="@string/exoplanets"
                            android:background="@drawable/custom_radio"/>

                        <RadioButton
                            android:id="@+id/filter_satellite"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:paddingHorizontal="15dp"
                            android:textSize="16sp"
                            android:layout_marginRight="15dp"
                            android:background="@drawable/custom_radio"
                            android:gravity="center"
                            android:button="@color/black"
                            android:text="@string/satellites"/>

                        <RadioButton
                            android:id="@+id/filter_asteroid"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:paddingHorizontal="15dp"
                            android:layout_marginRight="15dp"
                            android:textSize="16sp"
                            android:background="@drawable/custom_radio"
                            android:gravity="center"
                            android:button="@color/black"
                            android:text="@string/asteroids"/>
                    </RadioGroup>
                </LinearLayout>
            </HorizontalScrollView>



        </LinearLayout>

<!--tutuaj-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_products"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>


    </LinearLayout>


</FrameLayout>