<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AboutFragment">


    <ImageView
        android:id="@+id/balck_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        android:scaleType="centerCrop"
        android:src="@drawable/black" />

    <ImageView
        android:id="@+id/bg_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:background="@color/black"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <ImageButton
        android:id="@+id/go_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:src="@drawable/ic_arrow_back"
        android:background="@drawable/custom_btn_bg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="Astrumtaber"
            android:fontFamily="@font/micra"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/white"
            android:alpha="0.6"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="40dp"
            android:textSize="26sp"
            android:fontFamily="@font/micra"
            android:gravity="center"
            android:text="@string/app_name_astrumtaber"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/white"
            android:alpha="0.6"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="40dp"
            android:textSize="26sp"
            android:fontFamily="@font/micra"
            android:gravity="center"
            android:text="@string/made_by_wiktor_mandra_4pp2"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/white"
            android:alpha="0.6"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="40dp"
            android:textSize="26sp"
            android:fontFamily="@font/micra"
            android:gravity="center"
            android:text="@string/apologies_for_latency"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/white"
            android:alpha="0.6"/>




    </LinearLayout>

</FrameLayout>