<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.WelcomeFragment"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/black"
        android:scaleType="centerCrop"
        android:alpha="1"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        android:background="@color/black"
        android:alpha="0.4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="Astrumtaber"
            android:fontFamily="@font/micra"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/hello_mr_u_ytkowniku"
            android:textSize="30sp"
            android:textColor="#F2FFFFFF"
            android:fontFamily="@font/mina"
            android:textFontWeight="800"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:paddingHorizontal="25dp"
            android:paddingVertical="10dp"
            android:drawableTop="@drawable/ic_baseline_person_add_alt_1_24"
            android:text="@string/sign_up"
            android:textSize="18sp"
            android:backgroundTint="#801B5E20" />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="25dp"
            android:paddingVertical="10dp"
            android:drawableTop="@drawable/ic_baseline_login_24"
            android:text="@string/log_in"
            android:textSize="18sp"
            android:backgroundTint="#8001579B"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom|right">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="Made by: WiktorMandra4Pp"
            android:textColor="#4DFFFFFF"
            app:drawableLeftCompat="@drawable/ic_baseline_copyright_24" />
    </LinearLayout>

</FrameLayout>