<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LogInFragment">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/black"
        android:scaleType="centerCrop"
        android:alpha="1"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        android:background="@color/black"
        android:alpha="0.4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/logoBtn2"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="Astrumtaber"
            android:fontFamily="@font/micra"
            android:textColor="@color/white"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="75dp"
            android:text="@string/welcome_back"
            android:fontFamily="@font/mina_regular"
            android:textColor="#F2FFFFFF"
            android:textSize="50sp"/>

        <EditText
            android:id="@+id/edit_login_mail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:backgroundTint="#F2FFFFFF"
            android:hint="e-mail"
            android:inputType="textEmailAddress"
            android:textColorHint="#F2FFFFFF"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/edit_login_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#F2FFFFFF"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#F2FFFFFF"
            android:textSize="25sp"/>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <Button
                android:id="@+id/btn_log"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="fill"
                android:paddingTop="15dp"
                android:backgroundTint="#8001579B"
                android:textSize="25sp"
                android:fontFamily="@font/mina_bold"
                android:text="@string/log_in" />
        </LinearLayout>


        <!--    things here-->

    </LinearLayout>





    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom|right">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="Made by: WiktorMandra4Pp"
            android:drawableLeft="@drawable/ic_baseline_copyright_24"
            android:textColor="#4DFFFFFF"/>
    </LinearLayout>
</FrameLayout>